2008-05-28  Sam Steingold  <sds@gnu.org>

	* modules/clx/new-clx/clx.f (last-event-processed)
	(last-timestamp-processed) [USE_LIBXT]: add

2008-05-28  Sam Steingold  <sds@gnu.org>

	* m4/isc-posix.m4: remove. The comment says:
	This file is not needed with autoconf-2.53 and newer. Remove it in 2005.

2008-05-28  Sam Steingold  <sds@gnu.org>

	fix bug #[ 1975798 ]: parameter confusion in new Gray Streams functions
	* gray.lisp (stream-read-sequence): fix argument order in
	stream-read-byte-sequence and stream-read-char-sequence
	and specify the default values for start and end
	(stream-write-sequence): fix argument order in
	stream-write-byte-sequence and stream-write-char-sequence
	and specify the default values for start and end

2008-05-27  Sam Steingold  <sds@gnu.org>

	avoid obsolete macros
	* m4/c++.m4, m4/general.m4: use AC_LANG_PUSH/AC_LANG_POP
	instead of AC_LANG_SAVE/AC_LANG_RESTORE
	* m4/cc-ema.m4: use AC_PREPROC_IFELSE instead of AC_TRY_CPP
	* m4/c++.m4: use AC_RUN_IFELSE instead of AC_TRY_RUN and
	AC_LINK_IFELSE instead of AC_TRY_LINK, use AC_MSG_FAILURE
	* m4/general.m4 (CL_CPP_CHECK): remove unused macro

2008-05-27  Sam Steingold  <sds@gnu.org>

	* eval.d (unused): undef before #include "lightning.c"

2008-05-26  Sam Steingold  <sds@gnu.org>

	* floatparam.c, intparam.c: write to conftest.h or first arg, not stdout
	* m4/address.m4, m4/eloop.m4, m4/filecharset.m4, m4/param.m4:
	use AC_RUN_IFELSE instead of undocumented AC_TRY_EVAL(ac_link)
	* makemake.in (floatparam.h, intparam.h): update

2008-05-25  Sam Steingold  <sds@gnu.org>

	* lispbibl.d (setjmp, longjmp) [HAVE__JMP]: on all autoconf platforms
	(UNIX & __MINGW32__), use _setjmp and _longjmp whenever they are present

2008-05-25  Sam Steingold  <sds@gnu.org>

	* spvw_sigint.d (signal_handler_prepare_for_lisp): extracted from
	react_on_sigint()
	(react_on_sigint): call it
	* spvw_sigterm.d (quit_on_signal): ditto

2008-05-25  Bruno Haible  <bruno@clisp.org>
