@@ -1,16 +1,16 @@
-dnl Copyright (C) 2002 Free Software Foundation, Inc.
+dnl -*- Autoconf -*-
+dnl Copyright (C) 2002-2008 Free Software Foundation, Inc.
 dnl This file is free software, distributed under the terms of the GNU
 dnl General Public License.  As a special exception to the GNU General
 dnl Public License, this file may be distributed as part of a program
 dnl that contains a configuration script generated by Autoconf, under
 dnl the same distribution terms as the rest of that program.
 
-dnl From Bruno Haible.
+dnl From Bruno Haible, Sam Steingold.
 
-AC_PREREQ(2.13)
+AC_PREREQ(2.61)
 
-AC_DEFUN([CL_SIGSEGV],
-[
+AC_DEFUN([CL_SIGSEGV], [dnl
   dnl Prerequisites of AC_LIB_LINKFLAGS_BODY.
   AC_REQUIRE([AC_LIB_PREPARE_PREFIX])
   AC_REQUIRE([AC_LIB_RPATH])
@@ -25,18 +25,16 @@ AC_DEFUN([CL_SIGSEGV],
   cl_save_CPPFLAGS="$CPPFLAGS"
   AC_LIB_APPENDTOVAR([CPPFLAGS], [$INCSIGSEGV])
 
-  AC_CACHE_CHECK(for libsigsegv, cl_cv_lib_sigsegv, [
+  AC_CACHE_CHECK(for libsigsegv, cl_cv_lib_sigsegv, [dnl
     cl_cv_lib_sigsegv="no, consider installing GNU libsigsegv"
     cl_save_LIBS="$LIBS"
     LIBS="$LIBS $LIBSIGSEGV"
-    AC_TRY_LINK([#include <sigsegv.h>], [sigsegv_deinstall_handler();],
-      cl_cv_lib_sigsegv=yes)
+    AC_LINK_IFELSE([AC_LANG_SOURCE([#include <sigsegv.h>],
+      [sigsegv_deinstall_handler();])], [cl_cv_lib_sigsegv=yes])
     LIBS="$cl_save_LIBS"
   ])
   if test "$cl_cv_lib_sigsegv" = yes; then
     AC_DEFINE(HAVE_SIGSEGV, 1, [Define if you have the libsigsegv library.])
-  fi
-  if test "$cl_cv_lib_sigsegv" = yes; then
     AC_MSG_CHECKING([how to link with libsigsegv])
     AC_MSG_RESULT([$LIBSIGSEGV])
   else
